--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,9 +7,8 @@
       "type": "shell",
       "args": [
         "build",
-        // Ask dotnet build to generate full paths for file names.
+        "${workspaceFolder}",
         "/property:GenerateFullPaths=true",
-        // Do not generate summary otherwise it leads to duplicate errors in Problems panel
         "/consoleloggerparameters:NoSummary"
       ],
       "group": {
