add formatting task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,6 +26,8 @@
       "type": "shell",
       "args": [
         "format",
+        "-w",
+        "${workspaceFolder}/Octokit.sln"
       ],
       "presentation": {
         "reveal": "silent",
